fixed display overflow

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ html, body {
     font-size: 13px;;
 }
 #displayScreen{
-    overflow:hidden;+
+    overflow:hidden;
     border: 2px solid rgb(54, 54, 54);
     border-radius: 7px;
     margin: auto;
